@@ -3,12 +3,12 @@
    <description name="Wesnoth Eclipse Updates" url="http://eclipse.wesnoth.org/">
       The default update site for Wesnoth Eclipse Plugins
    </description>
-   <feature url="features/Wesnoth_Eclipse_Plugin_0.2.1.jar" id="Wesnoth_Eclipse_Plugin" version="0.2.1">
-      <category name="eclipse_plugins"/>
+   <feature url="features/Wesnoth_Eclipse_Plugin_1.0.0.jar" id="Wesnoth_Eclipse_Plugin" version="1.0.0">
+      <category name="Wesnoth UMC plugin"/>
    </feature>
-   <category-def name="eclipse_plugins" label="Wesnoth Eclipse Plugins">
+   <category-def name="Wesnoth UMC plugin" label="Wesnoth User Made Content plugin">
       <description>
-         Main category for wesnoth eclipse plugins
+         This category represents the UMC plugin
       </description>
    </category-def>
 </site>
