@@ -7,6 +7,7 @@ Eclipse plugin changelog
 	  If the build.xml file is missing the user can 'regenerate' it by using the
 	  project's context menu. A file without 'build.xml' is considered to be
 	  a data/campaigns/ project
+	* Added 'Advanced Preferences' preferences page.
 	* Removed the User Addons project
 	* The 'Setup workspace" action will create a project for each existing
 	  data/campaigns/ campaign and for each directory in 'useraddons/data/add-ons'
